[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://test-sprites/phone-placeholder.jpeg" type="Texture" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="time2work" type="Timer" parent="."]

[node name="MessageTimer" type="Timer" parent="."]

[node name="latestMessage" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -20.0
margin_right = -73.0
margin_bottom = -6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TESTMESSAGE 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="secondMessage" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -172.0
margin_top = 119.0
margin_right = -69.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TEST MESSAGE 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reply" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -172.0
margin_right = -127.0
margin_bottom = -152.0
text = "\"YES!\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reply2" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -123.0
margin_top = -172.0
margin_right = -70.0
margin_bottom = -152.0
text = "\"NO!!\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reply3" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -150.0
margin_right = -85.0
margin_bottom = -130.0
text = "\"IGNORE\""
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 677, 299 )
scale = Vector2( 1, 2.06429 )
z_index = -1
texture = ExtResource( 2 )
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
